# split-block-bloom-filter

./: .gitignore  README.md  bench  bench_split  benchmarks.md  bloom_filter.cpp  main.cpp  sbbf.hpp  split.cpp  test_bench.cpp
bloom_filter/: CMakeLists.txt  README.md  bench  bench.cpp  sbbf.h
build_bloom_filter/: CMakeCache.txt  Makefile  cmake_install.cmake  run_bench
build_split_block/: CMakeCache.txt  Makefile  cmake_install.cmake  run_bench
split_block/: .clangd  CMakeLists.txt  bench  bench.cpp  bench2.cpp  sbbf.h
